--- a/learning-outcomes/index.html
+++ b/learning-outcomes/index.html
@@ -9,7 +9,7 @@
   <title>Proof learning outcomes</title>
   <meta name='description' content='This blog is a means to share my research.'>
 
-  <link rel="canonical" href="/new_blog/learning-outcomes/">
+  <link rel="canonical" href="http://localhost:4000/new_blog/learning-outcomes/">
   <link rel="alternate" type="application/rss+xml" title="What&#39;s upsecurity" href="/new_blog/feed.xml">
 
   <!-- Google Font -->
